turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:8: error: method posTabColor has return statement; needs result type
		return x
                ^